--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "express": "3.14.0",
-    "ejs": "*"
+    "ejs": "*",
+    "mongodb": "*",
+        "connect-mongo": "*"
+
   }
 }
